try to fix alignment of paragraph

--- a/ph_styles.css
+++ b/ph_styles.css
@@ -43,9 +43,11 @@ header {
 
 p  {
 	margin: 0px;
-	padding: 5px, 25px, 25px, 25px;
+	padding: (5px, 25px, 25px, 25px);
 }
+
 /*text align page 128*/
+
 body > p {
 	font-size: 1.1em;
 	text-align: center;
